--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "react-transition-group": "^4.4.2",
     "swiper": "^8.1.5",
     "web-vitals": "^2.1.4"
   },
