--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "daisyui": "^2.15.0",
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
+    "react-auto-typing": "^1.0.0",
     "react-countup": "^6.2.0",
     "react-day-picker": "^8.0.4",
     "react-dom": "^18.1.0",
@@ -26,6 +27,7 @@
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-skillbars": "^2.0.1",
     "react-toastify": "^9.0.1",
     "react-transition-group": "^4.4.2",
     "swiper": "^8.1.5",
